<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.User.UserTransferTopUpFragment">

    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:text="Please Transfer to : BCA / 123456789 / CashBuddy"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="8dp"
                android:src="@drawable/ic_attach_money_black_24dp"
                android:tint="@color/White"
                android:background="@drawable/circle_primary_color"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:textSize="18sp"
                android:layout_gravity="center_vertical"
                android:text="Please enter top up amount"/>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_vertical">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/topUpAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Top up amount"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            android:src="@drawable/ic_account_balance_black_24dp"
            android:tint="@color/White"
            android:background="@drawable/circle_primary_color"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:textSize="18sp"
            android:layout_gravity="center_vertical"
            android:text="Please enter your bank's name"/>

    </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_vertical">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/bankName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Bank's name"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="8dp"
                android:src="@drawable/ic_person_black"
                android:tint="@color/White"
                android:background="@drawable/circle_primary_color"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:textSize="18sp"
                android:layout_gravity="center_vertical"
                android:text="Please enter your name"/>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_vertical">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Your name on your bank account"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <android.support.v7.widget.CardView
                android:layout_width="80sp"
                android:layout_height="80sp"
                app:contentPadding="2dp">

                <ImageView
                    android:id="@+id/payment_proof"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/logo" />
            </android.support.v7.widget.CardView>

            <Button android:id="@+id/uploadButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/PrimaryColorButton"
                android:layout_marginStart="16dp"
                android:layout_gravity="center_vertical"
                android:textSize="12sp"
                android:text="Upload Proof"/>
        </LinearLayout>

        <Button
            android:id="@+id/submitButton"
            android:theme="@style/PrimaryColorButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="end"
            android:padding="16dp"
            android:text="@string/topUpText" />

    </LinearLayout>
</FrameLayout>